k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sandbox-app
  template:
    metadata:
      labels:
        app: sandbox-app
    spec:
      containers:
      - name: web-server
        image: ghcr.io/craztool/cicd-sandbox:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
